<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="core.advanced.exclude.healthdevices"
        android:summary="@string/description_exclude_health"
        android:title="@string/label_exclude_health"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="core.advanced.exclude.gatt"
        android:summary="@string/description_exclude_gatt"
        android:title="@string/label_exclude_gatt"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="core.advanced.exclude.gattserver"
        android:summary="@string/description_exclude_gattserver"
        android:title="@string/label_exclude_gattserver"/>
</PreferenceScreen>